--- a/android/radio/res/values/strings.xml
+++ b/android/radio/res/values/strings.xml
@@ -2,4 +2,11 @@
 
 <resources>
   <string name="app_name">DM Radio</string>
+
+  <string name="choice_noProgram">Off</string>
+  <string name="message_noProgram">no program selected</string>
+  <string name="message_undefinedProgram">program not defined</string>
+  <string name="message_inaccessibleProgram">program not accessible</string>
+  <string name="message_uninstantiatableProgram">program won\'t start</string>
+  <string name="message_notProgram">not a program</string>
 </resources>
