--- a/android/radio/res/values/strings.xml
+++ b/android/radio/res/values/strings.xml
@@ -6,6 +6,7 @@
   <string name="action_selectProgram">Select Program</string>
   <string name="choice_noProgram">Off</string>
   <string name="message_noProgram">no program selected</string>
+  <string name="message_noPrograms">no programs have been defined</string>
 
   <string name="file_title">Title</string>
   <string name="file_artist">Artist</string>
