Rename some of the radio's file view's resources.

--- a/android/radio/res/values/strings.xml
+++ b/android/radio/res/values/strings.xml
@@ -8,8 +8,8 @@
   <string name="message_noProgram">no program selected</string>
   <string name="message_noPrograms">no programs have been defined</string>
 
-  <string name="file_title">Title</string>
-  <string name="file_artist">Artist</string>
+  <string name="file_metadata_title">Title</string>
+  <string name="file_metadata_artist">Artist</string>
 
   <string name="speech_text">Text</string>
 </resources>
