--- a/android/radio/res/values/strings.xml
+++ b/android/radio/res/values/strings.xml
@@ -4,8 +4,9 @@
   <string name="app_name">DM Radio</string>
 
   <string name="action_selectProgram">Select Program</string>
-  <string name="choice_noProgram">Off</string>
-  <string name="message_noProgram">no program selected</string>
+  <string name="name_noProgram">Off</string>
+  <string name="name_anonymousProgram">Unnamed</string>
+  <string name="message_noProgram">program not selected</string>
   <string name="message_noPrograms">no programs have been defined</string>
 
   <string name="action_nextFile">Next</string>
