Rework the waiting notification.

--- a/android/radio/res/values/strings.xml
+++ b/android/radio/res/values/strings.xml
@@ -16,5 +16,5 @@
   <string name="action_uriPause">Pause</string>
 
   <string name="state_noProgram">off</string>
-  <string name="state_waitingTill">waiting till %s</string>
+  <string name="state_waiting">waiting</string>
 </resources>
